testsuite/tests/properties/invalid_new_node/test.out
== Not memoized ==
test.py:33: error: Node synthetization can only happen inside a memoized property

== List synthetization ==
test.py:34: error: List node synthetization is not supported for now

== Not synthetic ==
test.py:27: error: Synthetized AST nodes must be annotated as synthetic

Done
